--- a/app_web/app_web/templates/base.html
+++ b/app_web/app_web/templates/base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}Gestión de Tareas y Mercado{% endblock %}</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -26,7 +27,7 @@
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <form method="post" action="{% url 'usuarios:logout' %}" style="display:inline;">
+                            <form method="post" action="{% url 'logout' %}" style="display:inline;">
                                 {% csrf_token %}
                                 <button type="submit">Cerrar sesión</button>
                             </form>
